# slim-vdb

./: .gitignore  CITATION.cff  CMakeLists.txt  Gemfile  LICENSE-MIT  Makefile  README.md  _config.yml  index.markdown  setup.cfg  setup.py
.github/workflows/: deploy.yml
docker/: run.sh
docker/builder/: Dockerfile
docker/pip/: Dockerfile
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  kitti_pipeline.cpp  realworld_pipeline.cpp  scenenet_pipeline.cpp
examples/cpp/config/: kitti.yaml  realworld.yaml  scenenet.yaml
examples/cpp/datasets/: CMakeLists.txt  KITTIOdometry.cpp  KITTIOdometry.h  RealWorldOdometry.cpp  RealWorldOdometry.h  SceneNetOdometry.cpp  SceneNetOdometry.h
examples/cpp/utils/: Config.h
examples/python/: Makefile  kitti_pipeline.py  requirements.txt  slimvdb_pipeline.py
examples/python/config/: kitti.yaml
examples/python/datasets/: __init__.py  kitti_odometry.py
examples/python/utils/: __init__.py  cache.py  config.py
src/: CMakeLists.txt
src/slimvdb/: CMakeLists.txt  __init__.py
src/slimvdb/pybind/: CMakeLists.txt  __init__.py  slimvdb_pybind.cpp  vdb_volume.py
src/slimvdb/slimvdb/: CMakeLists.txt  Config.h  Config.h.in  GenerateConfig.cmake  MarchingCubes.cpp  MarchingCubesConst.h  SLIMVDBConfig.cmake.in  VDBVolume.cpp  VDBVolume.h  VDBVolumeWrapper.cpp  VDBVolumeWrapper.h
src/slimvdb/slimvdb/cmake/: Install.cmake
src/slimvdb/slimvdb/nanovdb_utils/: ComputePrimitives.h  common.h  nanovdb.cu  nanovdb.cuh
src/slimvdb/slimvdb/utils/: Utils.h
