[metadata]
name=slimvdb
author=Anja Sheppard
author_email=anjashep@umich.edu
license_files=LICENSE.txt
version=0.1.0
description=real-time 3D probabilistic semantic mapping framework
long_description=file:README.md,
long_description_content_type=text/markdown
keywords=TSDF, Mapping, SLAM, LiDAR, Odometry, Localization,
classifiers =
  License :: OSI Approved :: MIT License
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    numpy

[options.extras_require]
test =
    pytest
